# Cynthasine

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  TODO.md
examples/: CMakeLists.txt  twinkle_cyn_ex.cpp
include/CynAudio/: CynAudio.h  CynAudioWave.h  CynNotes.h  CynPlayer.h
include/CynWave/: CynEigen.h  CynEigenUtils.h  CynGlobals.h  CynUtils.h  CynWave.h
include/Cynthasine/: Cynthasine.h
src/: CMakeLists.txt
src/CynAudio/: CMakeLists.txt  CynAudio.cpp  CynImplAudioWaveAddon.hpp  CynPlayer.cpp
src/CynWave/: CMakeLists.txt  CynEigenAddon.hpp  CynEigenUtils.hpp  CynUtils.hpp  CynWave.hpp
src/Cynthasine/: CMakeLists.txt  Cynthasine.cpp
tests/: CMakeLists.txt  audio_cyn_test.cpp  wave_cyn_test.cpp
tests/CynTestMkr/: .gitignore  LICENSE-MIT  README.md  config.toml  cyn_test_mkr.py
tests/test_data/audio/: Ukulele.csv
tests/test_data/random_waves/: 0.csv  1.csv
tests/test_data/truth_signals/: Add_1_0.csv  Mul_0_1.csv  Neg_0.csv  Neg_1.csv  Sub_0_1.csv  Sub_1_0.csv
